client/src/components/About/about.scss
@import "../../../global/global.scss";

.aboutMe {
  display: flex;
  height: 100vh;
  padding: 21px;
  font-family: "Montserrat";
  font-weight: bold;
  opacity: 0.95;
  text-align: justify;
  height: auto;

  h1 {
    text-transform: uppercase;
    font-family: "Roboto", sans-serif;
    font-size: 50px;
    font-weight: 700;
    display: flex;
    justify-content: center;
    text-transform: uppercase;
    color: #2c3e50;
    font-family: "Roboto", sans-serif;
    font-weight: 700;
  }
}

.aboutMe-paragraph {
  display: flex;

  h1 {
    margin-bottom: 0.2em;
    font-size: 1.6em;
  }

  p {
    margin-bottom: 1em;
    line-height: 1.7em;
  }
}

.containerAbout {
  border: 1px solid #eee;

  ul {
    list-style-type: none;
    color: black;
    line-height: 1.7em;
    margin-bottom: 1em;
    text-align: center;
    padding-top: 0.6em;
  }
}

//phones
@media only screen and (max-width: 425px) {
  .aboutMe {
    flex-direction: column;
    height: auto;

    h1 {
      margin-bottom: 0.4em;
    }
  }

  .aboutMe-paragraph {
    flex-direction: column;

    p {
      font-size: 0.9em;
    }
  }

  .polaroid-parent {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    overflow-x: auto;

    .polaroid {
      position: relative;
      margin: 1%;
    }

    .polaroid img {
      border: 10px solid #fff;
      border-bottom: 45px solid #fff;
      -webkit-transition: -webkit-transform 0.15s linear;
      -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
      -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
      margin-top: 5px;
      width: auto;
      height: 250px;
    }

    .polaroid p {
      position: absolute;
      text-align: center;
      width: 100%;
      bottom: 0px;
      font-family: Courier New;
      text-transform: uppercase;
      color: #888;
      padding-bottom: 15px;
    }
  }

  .about-content {
    display: flex;
    flex-direction: column;
  }

  .about-me {
    display: flex;

    h1 {
      justify-content: center;
      font-size: 2em;
      margin-top: 0.8em;
      margin-bottom: 0.3em;
    }
  }

  .about-me-description {
    ol {
      line-height: 1.7em;
      font-size: 0.9em;
    }
  }
}

//tablets
@media only screen and (min-width: 426px) and (max-width: 960px) {
  .aboutMe {
    flex-direction: column;
    height: auto;

    h1 {
      margin-top: 3%;
      margin-bottom: 3%;
    }
  }

  .containerForPicDescription {
    display: flex;

    .aboutMe-paragraph {
      flex-direction: column;
      height: auto;

      p {
        margin-top: 0;
        line-height: 2.1em;
        font-size: 0.8em;
      }
    }
  }

  .containerAbout {
    display: flex;
    flex-direction: column;
    flex: 1;
  }

  .polaroid-parent {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    justify-content: center;
  }

  .polaroid {
    position: relative;
    margin: 1%;
    padding: 2%;
  }

  .polaroid img {
    border: 10px solid #fff;
    border-bottom: 45px solid #fff;
    -webkit-transition: -webkit-transform 0.15s linear;
    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
    margin-top: 5px;
  }

  .polaroid img:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    position: relative;
    z-index: 5;
  }

  .polaroid p {
    position: absolute;
    text-align: center;
    width: 100%;
    bottom: 0px;
    font-family: Courier New;
    text-transform: uppercase;
    color: #888;
    padding-bottom: 15px;
  }

  .about-me-description {
    line-height: 2em;
    font-size: 0.8em;
  }
}

@media only screen and (min-width: 961px) {
  .aboutMe {
    flex-direction: column;
    padding-left: 3em;
    padding-right: 3em;

    .aboutMe-header {
      h1 {
        font-size: 50px;
      }
    }
  }

  .containerForPicDescription {
    display: flex;
    flex-direction: column;
    padding-top: 1em;
  }

  .about-container {
    display: flex;
    margin-top: 2%;

    .aboutMe-paragraph {
      flex-direction: column;
      font-size: 0.9em;
      flex: 3;

      p {
        line-height: 2.8em;
      }
    }
  }

  .containerAbout {
    margin-left: 2%;
    flex: 1;
  }

  .polaroid-parent {
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    justify-content: center;
  }

  .polaroid {
    position: relative;
    padding: 2%;
  }

  .polaroid img {
    border: 10px solid #fff;
    border-bottom: 45px solid #fff;
    -webkit-transition: -webkit-transform 0.15s linear;
    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
    margin-top: 5px;
  }

  .polaroid img:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    position: relative;
    z-index: 5;
  }

  .polaroid p {
    position: absolute;
    text-align: center;
    width: 100%;
    bottom: 0px;
    font-family: Courier New;
    text-transform: uppercase;
    color: #888;
    padding-bottom: 15px;
  }

  .about-me {
    h1 {
      margin-top: 0.3em;
      margin-bottom: 0.3em;
    }
  }

  .about-me-description {
    line-height: 2.3em;
    font-size: 0.9em;
  }
}

